<resources>
    <string name="app_name">Firebase Auth Demo</string>
    <string name="hint_email">Enter email</string>
    <string name="hint_password">Enter password</string>
    <string name="btn_login">Login</string>
    <string name="forgot_password">Forgot your password?</string>
    <string name="already_have_account">Already have an account?</string>
    <string name="signup">Sign up</string>
    <string name="dont_have_account">Don\'t have account?</string>
    <string name="register">Register here.</string>
    <string name="login">Log in.</string>
    <string name="btn_register">Register</string>
    <string name="hint_confirm_password">Confirm password</string>
    <string name="back"><![CDATA[< Back]]></string>
    <string name="btn_reset_password">Reset Password</string>
    <string name="reset_hint">Enter your email Id to receive password reset instructions.</string>
    <string name="reset_msg">Reset Email has been sent. Follow the link in mail to reset password.</string>
    <string name="firebase">Firebase</string>
    <string name="change_email">Change Email</string>
    <string name="change_password">Change Password</string>
    <string name="remove_user">Remove User</string>
    <string name="sign_out">Sign out</string>
    <string name="home">Home</string>
    <string name="welcome_text">Welcome</string>
    <string name="welcome_message">To access Firebase options, open navigation drawer.</string>
    <string name="btn_change">Change</string>
    <string name="delete_user_confirm">Are you sure you want to delete this account?</string>
    <string name="delete_user">Delete User</string>
    <string name="btn_yes">Yes</string>
    <string name="btn_no">No</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="try_again">Try Agian</string>
</resources>
